# codes_in_c

./: README.md
Projekt/: CMakeLists.txt  Makefile  main  main.c  map.txt  pacman
ex_01/: main  main.c
ex_02/: main  main.c
ex_02/output/: main
ex_03/output/: main
ex_04/output/: main
ex_05/: main  main.c  norm
ex_06/: main  main.c  normalize.c
ex_07/UPR_2025W_BER0134_test_midterm/test_00/: stdin  stdout
ex_07/UPR_2025W_BER0134_test_midterm/test_02/: stdin
ex_07/UPR_2025W_BER0134_test_midterm/test_04/: stdin
ex_07/UPR_2025W_BER0134_test_midterm/test_05/: stdin  stdout
ex_07/UPR_2025W_BER0134_test_midterm/test_06/: stdout
ex_07/UPR_2025W_BER0134_test_midterm/test_07/: stdin
ex_07/UPR_2025W_BER0134_test_midterm/test_08/: stdin  stdout
ex_07/UPR_2025W_BER0134_test_midterm/test_09/: stdout
ex_08/output/: main
ex_09/: main  main.c
ex_09/points_users/: users.txt
ex_10/: main  main.c
exercises/ex_03/: main.c
exercises/ex_04/: main.c
exercises/ex_07/: main.c
exercises/ex_08/: main.c
exercises/ex_10/: output.tga
exercises/ex_11/: Makefile  array.c  array.h  main  main.c
homeworks/homework_02/: main  main.c
homeworks/homework_03/: main  main.c
homeworks/homework_04/: main  main.c
homeworks/homework_05/: main  main.c
homeworks/homework_06/: main  main.c
homeworks/homework_07/: index.html  main  main.c
homeworks/homework_08/: main  main.c
homeworks/homework_09/: main  main.c  out.tga
homeworks/homework_10/: CMakeLists.txt  main.c
homeworks/homework_10/template/: CMakeLists.txt  dynamic_array.c  dynamic_array.h
(+34 files in other folders)
